[package]
name = "neko-message-plane"
version = "0.2.0"
edition = "2021"

[dependencies]
zmq = "0.10"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
num_cpus = "1.16"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
lto = true
codegen-units = 1
incremental = true
opt-level = 1