[package]
name = "neko_plugin_cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "neko_plugin_cli"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.28"
arboard = "3"
directories = "5"
globset = "0.4"
md5 = "0.7"
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }
rayon = "1"
ratatui = "0.29"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
python = ["pyo3"]